--- a/client/src/styles/navbar.module.css
+++ b/client/src/styles/navbar.module.css
@@ -1,50 +1,51 @@
 .navbar {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 10px 30px;
-    background-color: #222;
-    color: white;
-  }
-  
-  .logo img {
-    width: 40px;
-    height: 40px;
-  }
-  
-  .menu, .rightMenu {
-    display: flex;
-    gap: 20px;
-  }
-  
-  .menu a, .rightMenu a {
-    text-decoration: none;
-    color: white;
-    padding: 10px 15px;
-    position: relative;
-  }
-  
-  .dropdown {
-    position: relative;
-  }
-  
-  .dropdownContent {
-    display: none;
-    position: absolute;
-    top: 100%;
-    left: 0;
-    background-color: #333;
-    border: 1px solid #555;
-  }
-  
-  .dropdownContent a {
-    display: block;
-    padding: 10px 15px;
-    color: white;
-    text-decoration: none;
-  }
-  
-  .dropdown:hover .dropdownContent {
-    display: block;
-  }
-  
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 10px 30px;
+  background-color: #222;
+  color: white;
+}
+
+.logo img {
+  width: 40px;
+  height: 40px;
+}
+
+.menu,
+.rightMenu {
+  display: flex;
+  gap: 20px;
+}
+
+.menu a,
+.rightMenu a {
+  text-decoration: none;
+  color: white;
+  padding: 10px 15px;
+  position: relative;
+}
+
+.dropdown {
+  position: relative;
+}
+
+.dropdownContent {
+  display: none;
+  position: absolute;
+  top: 100%;
+  left: 0;
+  background-color: #333;
+  border: 1px solid #555;
+}
+
+.dropdownContent a {
+  display: block;
+  padding: 10px 15px;
+  color: white;
+  text-decoration: none;
+}
+
+.dropdown:hover .dropdownContent {
+  display: block;
+}
